tests/NormalTests/paczka1/small_fuzzy/10081679.err
Error in line 9: Vt122k30T19 S368 55,85
Error in line 1: IXaOWXRqAry S406 14,8
Error in line 11: IXaOWXRqAry S271 92,5
Error in line 13: IXaOWXRqAry S406 50,9
